--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         </dependency>
     </dependencies>
 
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -23,6 +24,7 @@
     </properties>
 
     <build>
+        <defaultGoal>install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -34,6 +36,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
